# RAG-APP

./: .env  .replit  Dockerfile  app.py  files.db  pyproject.toml  requirements.txt
attached_assets/: Pasted-from-flask-import-Flask-render-template-request-redirect-url-for-send-file-session-flash-jso-1746554068285.txt
static/css/: styles.css
static/js/: main.js  note_editor.js  pdf_qa.js
templates/: 404.html  500.html  base.html  forgot_password.html  index.html  login.html  note_editor.html  reset_password.html  signup.html  user_dashboard.html
