[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "bcrypt>=4.3.0",
    "pypandoc>=1.15",
    "langchain-text-splitters>=0.3.8",
    "flask-mail>=0.10.0",
    "itsdangerous>=2.2.0",
    "pdfplumber>=0.11.6",
    "rank-bm25>=0.2.2",
    "trafilatura>=2.0.0",
    "openai>=1.77.0",
]
